refactor for new architecture